[gd_scene load_steps=4 format=3 uid="uid://bgdf46spfyo6i"]

[ext_resource type="Script" path="res://source/game.gd" id="1_rtd5p"]
[ext_resource type="Script" path="res://source/table.gd" id="2_7trmq"]
[ext_resource type="Script" path="res://source/hand.gd" id="3_jawyp"]

[node name="Game" type="Node2D"]
script = ExtResource("1_rtd5p")
card_colors = PackedColorArray(0.654902, 0.137255, 0.137255, 1, 0.113725, 0.211765, 0.819608, 1, 0.152941, 0.654902, 0, 1, 0.886275, 0.835294, 0.0627451, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[node name="Table" type="Node2D" parent="."]
position = Vector2(800, 450)
script = ExtResource("2_7trmq")
color = Color(0.196078, 0.137255, 0.0862745, 1)

[node name="Hand" type="Node2D" parent="."]
script = ExtResource("3_jawyp")

[node name="Buttons" type="GridContainer" parent="."]
custom_minimum_size = Vector2(420, 140)
offset_left = 1140.0
offset_top = 720.0
offset_right = 1560.0
offset_bottom = 860.0
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 2

[node name="LeftButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Push Left"

[node name="RightButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Push Right"

[node name="SwapButton" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Swap"

[connection signal="pressed" from="Buttons/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Buttons/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Buttons/SwapButton" to="." method="_on_swap_button_pressed"]
